css/style.css
html { height: 100% }
	  	body { height: 100%; margin: 0px; padding: 0px }
	    #map_canvas { height: 100% }

.header {
	font-family: Verdana, sans-serif; 
	font-variant: small-caps; 
	color: #002357; 		
}
.mainhead {
	font-variant: small-caps; 
	font-size: 3em;
	text-align: center; 
}
.subhead {
	font-variant: normal; 
	text-align: center; 
	font-size: 1.5em;
}
.headlinks {
	font-variant: normal;
	text-align: right;
	font-size: 1em;
}
.body {
	font-family: Verdana, sans-serif;
}



.button {
    padding: 5px 10px;
    display: inline;
    background: #002357 url(button.png) repeat-x bottom;
    border: none;
    color: #fff;
    cursor: pointer;
    font-weight: bold;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    text-shadow: 1px 1px #666;
}

.button2 {
    padding: 5px 10px;
    display: inline;
    background: #CECECE url(button.png) repeat-x bottom;
    border: none;
    color: #002357;
    cursor: pointer;
    font-weight: bold;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
}

.buttons {
	text-align: center;
}

.description {
	text-align: left;
}

.footer {
	text-align: left;
}

.homelink {
	text-decoration: none;
	color: #002357; 
}

.form {
	text-align: left;
}

.accountform {
	text-align: center;
}

.accountform td {
	text-align: left;
}

.accountform h2 {
	color: #002357;
	text-decoration: underline;
}

.footer {
	font-family: Verdana, sans-serif; 
}

.dashboard {	
	font-family: Verdana, sans-serif; 
	
}

.Login h3 {
	color: #002357;
}

.dashboard h2 {
	color: #002357;
	text-decoration: underline;
}

.dashboard h4 {
	color: #002357;
}

td.futurereserve {
	background-color: #00CC00;
}
td.pastreserve {
	background-color: #CC0000;
}

